@@ -12,6 +12,8 @@
 #define SLOWRUN                 20
 #define TMPNAME                 "TMP."
 #define LCKNAME                 "LOCKTASK"
+#define	TOSSWAIT_TIME		30
+
 
 
 /*
